# Capstone_design_ACESCAR

./: README.md
(Pi3_LAST_CODE)Autonomous-Car-Controller-master/Autonomous-Car-Controller-master/: CMakeLists.txt  README.md  package.xml
(TX2_LAST_CODE)Autonomous-Car-master/Autonomous-Car-master/: CMakeLists.txt  package.xml
(TX2_LAST_CODE)Autonomous-Car-master/Autonomous-Car-master/include/: control.h  lds_driver.h  zed_depth.h
(TX2_LAST_CODE)Autonomous-Car-master/Autonomous-Car-master/src/: control.cpp  lds_driver.cpp  main.cpp
(TX2_LAST_CODE)Autonomous-Car-master/Autonomous-Car-master/src/backup/: control.cpp  main.cpp  zed_depth.cpp
샤시제어 코드/: PID 예제코드.txt  Pi3code LAST.txt  라즈베리파이3 사용정보.txt  차량 제어 기본 정보.hwp  하드웨어 사용 정보.txt
샤시제어 코드/ROS공부용 코드/: CMAKE PI.txt  CMAKE TX2.txt  Pi 키보드 제어노드.txt  Tx2 키보드 제어 노드.txt
샤시제어 코드/original/: PWMBACKWARD code.txt  PWMFORWARD code 2.txt  PWMFORWARD code.txt  PWMSTOP code.txt  SERVOCONTORL_L.txt  SERVOCONTORL_N.txt  SERVOCONTORL_R.txt
샤시제어 코드/자율제어용/contro_esc_v3/: 1. control_esc_v3 start 신호 인식X.txt  2. control_esc_v3 start 신호 인식O.txt  3. control_esc_v3 초음파 센서 사용.txt
샤시제어 코드/자율제어용/contro_esc_v3(1학기 최종)/: control_esc_v3(1학기 최종).txt
샤시제어 코드/자율제어용/control_esc_v3(2학기 최종)/: Pi3code.txt
샤시제어 코드/자율제어용/전후진(ESC)/: DCBACKWARD.txt  DCFORWARD.txt  DCSTOP.txt
샤시제어 코드/자율제어용/좌우(서보모터)/: 조향 빡오른쪽.txt  조향 빡왼쪽.txt  조향 중립.txt
샤시제어 코드/자율제어용/좌우(서보모터)/각도값 받고 제어/: 조향 제어 코드.txt
