<?xml version="1.0"?>
<package>
	<name>control_esc_v3</name>
	<version>0.1.0</version>
	<description>ROS turtorialpackage to learn the topic</description>
	<license>Apache License 2.0</license>
	<maintainer email="pyo@robotis.com">Yoonseok Pyo</maintainer>
	<buildtool_depend>catkin</buildtool_depend>
	<build_depend>roscpp</build_depend>
	<build_depend>std_msgs</build_depend>
	<build_depend>message_generation</build_depend>
				
	<run_depend>roscpp</run_depend>
	<run_depend>std_msgs</run_depend>
	<run_depend>message_runtime</run_depend>
	<export></export>
</package>
