<?xml version="1.0"?>
<package>
  <name>lds_car</name>
  <version>0.0.0</version>
  <description>The lds_car package</description>

  <maintainer email="chijepark@google.com">chijepark</maintainer>
  <license>Hoban1.1</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>rosconsole</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>opencv</build_depend>
  
  
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>rosconsole</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>opencv</run_depend>

  <export>
  </export>
</package>
